Cleaned up and sorted out the build